Almost completed implementation of getSalaryStatementForEmployeeApi.The rest of the problem is how to handle time data.
